--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Jacob Anderson</title>
+    </head>
+    <body> 
+        <h1> Jacob Anderson's CSCE 190 Site
+        </h1>
+
+    </body>
+</html>
