--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body> 
         <h1> Jacob Anderson's CSCE 190 Site
-        </h1>
 
+            <P> i &hearts; coding!</P>
     </body>
 </html>
